# canyon

./: .gitignore  .gitmodules  README.en.md  README.md
bootloader/: Cargo.toml  Makefile  README.md
bootloader/efi/: Cargo.toml  Makefile  boot.conf  rust-toolchain
bootloader/efi/src/: config.rs  fs.rs  main.rs  page_table.rs
bootloader/src/: lib.rs
fs/: Cargo.toml  README.md
fs/rootfs/: hello
fs/src/: fs.rs  lib.rs  main.rs
fs/src/cafs/: bitmap.rs  cache.rs  layout.rs  mod.rs
fs/src/vfs/: dir_entry.rs  mod.rs  path.rs
kernel/: Cargo.toml  Makefile  TODO.md  rust-toolchain
kernel/.cargo/: config  config.toml
kernel/src/: allocator.rs  lib.rs  logger.rs  main.rs  memory.rs  testing.rs  x86_64.ld
kernel/src/arch/: mod.rs
kernel/src/arch/x64/: apic.rs  gdt.rs  idt.rs  mod.rs
kernel/src/arch/x64/device/: keyboard.rs  mod.rs  pit.rs  timer.rs
kernel/src/arch/x64/interrupt/: apic.rs  idt.rs  mod.rs
kernel/src/arch/x86_64/: gdt.rs  idt.rs  mod.rs
kernel/src/drivers/: ahci.rs  mod.rs  pci.rs  provider.rs
kernel/src/fs/: mod.rs
kernel/src/libcanyon/: Cargo.toml
kernel/src/memory/: frame.rs  mod.rs
kernel/src/process/: elf.rs  mod.rs  thread.rs
kernel/tests/: 001_stack_overflow.rs
