[package]
name = "canyon-os"
version = "0.1.0"
edition = "2021"

[lib]
name = "canyon"

[dependencies]
bootloader-lib = { path="../bootloader" }
log = "0.4.17"
noto-sans-mono-bitmap = "0.1.5"
spin = "0.9.4"
uart_16550 = "0.2.18"
uefi = "0.16.0"
x86_64 = "0.14.10"

[features]
default = ["qemu"]
qemu = []
