[package]
name = "canyon-os"
version = "0.5.0"
edition = "2021"

[lib]
name = "canyon"

[dependencies]
bootloader-lib = { path="../bootloader" }
fs = { path = "../fs" }
gpt_disk_io = "0.15.0"
isomorphic_drivers = { git = "https://github.com/rcore-os/isomorphic_drivers", features = ["log"] }
log = "0.4.17"
noto-sans-mono-bitmap = "0.1.5"
pci = { git = "https://github.com/rcore-os/pci-rs", rev = "a4e7cea6" }
spin = "0.9.8"
uart_16550 = "0.2.18"
uefi = "0.18.0"
uguid = "2.0.1"
x2apic = "0.4.1"
x86_64 = "0.14.10"
xmas-elf = "0.9.0"

[features]
default = ["qemu"]
qemu = []
