[package]
name = "bootloader"
version = "1.0.0"
edition = "2021"


[dependencies]
# Some UEFI implementations, such as the one used by VirtualBox,
# may intermittently drop out some text from SimpleTextOutput and
# report an EFI_DEVICE_ERROR. This will be reported here as an
# `fmt::Error`, and given how the `log` crate is designed, our main
# choices when that happens are to ignore the error or panic.
#
# Ignoring errors is bad, especially when they represent loss of
# precious early-boot system diagnosis data, so we panic by
# default. But if you experience this problem and want your UEFI
# application to keep running when it happens, you can enable the
# `ignore-logger-error` cargo feature. If you do so, logging errors
# will be ignored by `uefi-rs` instead.
# uefi = { version = "0.15.0", features = ["ignore-logger-error"] }
uefi = { version = "0.18.0", features = ["alloc", "logger", "exts"] }
uefi-services = "0.15.0"
log = "0.4.17"
x86_64 = "0.14.10"
xmas-elf = "0.9.0"
bootloader-lib = { path = "../" }
